refactor game to use state machine

--- a/lecture1/html/bird8/index.html
+++ b/lecture1/html/bird8/index.html
@@ -15,12 +15,18 @@
 <script src="constants.js"></script>
 <script src="lib/watchers.js"></script>
 <script src="lib/Box.js"></script>
+<script src="lib/StateMachine.js"></script>
+<script src="lib/BaseState.js"></script>
+<script src="game/Title.js"></script>
 <script src="game/Pipe.js"></script>
 <script src="game/PipePair.js"></script>
 <script src="game/Pipes.js"></script>
 <script src="game/Bird.js"></script>
 <script src="game/Ground.js"></script>
 <script src="game/Background.js"></script>
+<script src="game/TitleScreenState.js"></script>
+<script src="game/PauseScreenState.js"></script>
+<script src="game/PlayState.js"></script>
 <script src="game/Game.js"></script>
 <script src="main.js"></script>
 </body>
