add game over screen

--- a/lecture1/html/bird8/index.html
+++ b/lecture1/html/bird8/index.html
@@ -18,15 +18,17 @@
 <script src="lib/StateMachine.js"></script>
 <script src="lib/BaseState.js"></script>
 <script src="game/Title.js"></script>
+<script src="game/GameOver.js"></script>
 <script src="game/Pipe.js"></script>
 <script src="game/PipePair.js"></script>
 <script src="game/Pipes.js"></script>
 <script src="game/Bird.js"></script>
 <script src="game/Ground.js"></script>
 <script src="game/Background.js"></script>
-<script src="game/TitleScreenState.js"></script>
-<script src="game/PauseScreenState.js"></script>
-<script src="game/PlayState.js"></script>
+<script src="game/states/TitleScreenState.js"></script>
+<script src="game/states/PauseScreenState.js"></script>
+<script src="game/states/PlayState.js"></script>
+<script src="game/states/GameOverState.js"></script>
 <script src="game/Game.js"></script>
 <script src="main.js"></script>
 </body>
