show score during game

--- a/lecture1/html/bird8/index.html
+++ b/lecture1/html/bird8/index.html
@@ -19,6 +19,7 @@
 <script src="lib/BaseState.js"></script>
 <script src="game/Title.js"></script>
 <script src="game/GameOver.js"></script>
+<script src="game/ScorePanel.js"></script>
 <script src="game/Pipe.js"></script>
 <script src="game/PipePair.js"></script>
 <script src="game/Pipes.js"></script>
